--- a/project1/webapp/view/Facilitis.view.xml
+++ b/project1/webapp/view/Facilitis.view.xml
@@ -27,9 +27,9 @@
                 id="PO_id_FilterbarEmployee"
                 persistencyKey="myPersKey"
                 useToolbar="false"
-                clear="PO_onPressClear"
+                clear="FC_onPressClear"
                 showClearOnFB="true"
-                search="HM_onSearch"
+                search="FC_onSearch"
                 filterChange="IA_.onFilterChange"
                 afterVariantLoad="IA_.onAfterVariantLoad"
                 showFilterConfiguration="false"
@@ -38,20 +38,20 @@
             >
                 <fb:filterGroupItems>
                     <fb:FilterGroupItem
-                        name="Bed Type"
-                        label="Bed Type"
+                        name="Facility Name"
+                        label="Facility Name"
                         groupName="Group"
                         visibleInFilterBar="true"
                     >
                         <fb:control>
                             <ComboBox
-                                id="PO_id_CustomerName"
-                                items="{HostelModel>/}"
+                                id="FN_id_FacilityName"
+                                items="{Facilities>/}"
                                 showClearIcon="true"
                             >
                                 <core:Item
-                                    key="{HostelModel>CustomerName}"
-                                    text="{HostelModel>CustomerName}"
+                                    key="{Facilities>FacilityName}"
+                                    text="{Facilities>FacilityName}"
                                 />
                             </ComboBox>
                         </fb:control>
@@ -67,13 +67,13 @@
                     >
                         <fb:control>
                             <ComboBox
-                                id="PO_id_CompanyName"
-                                items="{HostelModel>/}"
+                                id="FN_id_BranchCode"
+                                items="{Facilities>/}"
                                 showClearIcon="true"
                             >
                                 <core:ListItem
-                                    key="{HostelModel>RoomNumber}"
-                                    text="{HostelModel>RoomNumber}"
+                                    key="{Facilities>BranchCode}"
+                                    text="{Facilities>BranchCode}"
                                 />
                             </ComboBox>
                         </fb:control>
@@ -93,17 +93,17 @@
                 <headerToolbar>
                     <OverflowToolbar>
                         <Title
-                            text="Booking List ({=${HostelModel>/}.length})"
+                            text="facilities ({=${Facilities>/}.length})"
                         />
                         <ToolbarSpacer />
                          <Button
-                            text="Add Facilties"
+                            text="Add Facility"
                             press="FD_RoomDetails"
                             type="Accept"
                         />
                           <Button
                             text="Edit"
-                            press="HM_EditDetails"
+                            press="FD_EditDetails"
                             type="Transparent"
                         />
                          <Button
@@ -146,6 +146,14 @@
                             text="Price"
                         />
                     </Column>
+                     <Column
+                        minScreenWidth="Tablet"
+                        demandPopin="true"
+                    >
+                        <Text
+                            text="Faclity Image"
+                        />
+                    </Column>
                 
                 </columns>
                 <items>
@@ -161,7 +169,7 @@
 
                          <Button
                             text="View"
-                            press="HM_viewroom"
+                            press="FC_viewroom"
                             type="Transparent"
                         />
                          
